Git deploy test (Logo shouldn't appear)

--- a/templates/pivote-table-layout.html
+++ b/templates/pivote-table-layout.html
@@ -29,8 +29,7 @@
 	<header id="header">
 		<nav class="navbar navigation">
 			{% block nav %}
-			<a class="navbar-brand" href="https://pad2chat.com/" target="_blank"><img
-					src="{{ url_for('static', filename='img/logo-pad.png') }}" width="45"></a>
+			<a class="navbar-brand" href="https://pad2chat.com/" target="_blank"></a>
 			<h1>Tabla Pivote</h1>
 			{% endblock %}
 		</nav>		
