Removed unncessary stuff

--- a/templates/pivote-table-main.html
+++ b/templates/pivote-table-main.html
@@ -11,7 +11,7 @@
 {% endblock %}
 <!-- Contenido -->
 {% block content %}
-<h1>Tabla pivote para visualización de datos TEST 3</h1>
+<h1>Tabla pivote para visualización de datos</h1>
 <p class="lead">Una tabla pivote es una herramienta que permite desplegar datos en formato de hoja de cálculo, con funcionalidades extra.</p>
 <hr class="my-4">
 <div class="filters jumbotron">
