--- a/templates/pivote-table-main.html
+++ b/templates/pivote-table-main.html
@@ -29,7 +29,7 @@
 			<input type="text" autocomplete="off" name="experiencia"class="input-box" id="experiencia">
 		</div>
 		<div class="form-row">
-			<label for="num-telefono" class="field-label">Número telefónico:</label>
+			<label for="num-telefono" class="field-label">Teléfono:</label>
 			<input type="text" autocomplete="off" name="num-telefono" class="input-box" id="num-telefono">
 		</div>
 		<div class="form-row">
