Now it may work

--- a/templates/pivote-table-output.html
+++ b/templates/pivote-table-output.html
@@ -24,13 +24,13 @@
 	<ul class="button-bar">
 
 		<li class="btn btn-primary" onclick="javascript:cambiarReporte(1)">Plana</li>
-		<li class="btn btn-primary" onclick="javascript:cambiarReporte(2)">Cont.-Resp.</li>
+		<li class="btn btn-primary" onclick="javascript:cambiarReporte(2)">Tel.-Resp.</li>
 		<li class="btn btn-primary" onclick="javascript:cambiarReporte(3)">Preg.-Resp.</li>
-		<li class="btn btn-primary" onclick="javascript:cambiarReporte(4)">Resp.-Cont.</li>
+		<li class="btn btn-primary" onclick="javascript:cambiarReporte(4)">Resp.-Tel.</li>
 
 		<li class="btn btn-success" onclick="javascript:cambiarReporte(5)">Total. Resp.</li>
-		<li class="btn btn-success" onclick="javascript:cambiarReporte(6)">Total. Resp.-Cont.</li>
-		<li class="btn btn-success" onclick="javascript:cambiarReporte(7)">Total. Cont.-Resp.</li>
+		<li class="btn btn-success" onclick="javascript:cambiarReporte(6)">Total. Resp.-Tel.</li>
+		<li class="btn btn-success" onclick="javascript:cambiarReporte(7)">Total. Tel.-Resp.</li>
 		<li class="btn btn-success" onclick="javascript:cambiarReporte(8)">Total. Preg.-Resp.</li>
 
 	</ul>
