--- a/templates/pivote-table-layout.html
+++ b/templates/pivote-table-layout.html
@@ -19,7 +19,7 @@
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 	</script>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/pivote-table-home.css') }}">
-	<title>{% block title %}{% endblock %}Pivot table</title>
+	<title>{% block title %}{% endblock %}Pivote table</title>
 	{% endblock %}
 </head>
 <!-- {{ url_for('static', filename='img/logo-caeti.png') }} -->
@@ -27,6 +27,7 @@
 <body>
 	
 	<header id="header">
+		<!-- navbar navigation -->
 		<nav class="navbar navigation">
 			{% block nav %}
 			{% endblock %}
@@ -35,7 +36,7 @@
 	
 	
 	<main class="container">
-		<div class="jumbotron main-hero">
+		<div class="jumbotron">
 			{% block content %}
 			{% endblock %}
 		</div>
@@ -43,7 +44,8 @@
 	
 	<footer>
 		{% block footer %}
-		<nav class="navbar navigation home-footer">
+		<!-- home-footer navbar navigation  -->
+		<nav class="navbar bottom">
 		
 		</nav>
 		{% endblock %}
