--- a/static/css/pivote-table-home.css
+++ b/static/css/pivote-table-home.css
@@ -23,46 +23,28 @@ html {
 
 .navigation {
 	background: #f8f8f8;
-	-webkit-box-shadow: 1px 19px 25px 0px rgba(0, 0, 0, 0.75);
-	-moz-box-shadow: 1px 19px 25px 0px rgba(0, 0, 0, 0.75);
-	box-shadow: 1px 19px 25px 0px rgba(0, 0, 0, 0.75);
-
-}
-.navigation>h1{
-	color: #0097e6;
-	height: 45px;
-}
-.navbar{
-	justify-content: left;
+	margin-bottom: 64px;
 }
 
-.main-hero {
-	margin: 40px auto;
-	background: #f8f8f8;
-}
+
+
 
 .btn-container{
 	display: flex;
-	
 	justify-content: center;
 	align-items: center;
-}
-.back-to-the-top-btn {
-	background-color: #D7DDE8;
-	border: #D7DDE8;
-	color: black;
 }
 
 
 .home-footer{
-	-webkit-box-shadow: 0px -10px 25px 1px rgba(0, 0, 0, 0.75);
+	/* -webkit-box-shadow: 0px -10px 25px 1px rgba(0, 0, 0, 0.75);
 	-moz-box-shadow: 0px -10px 25px 1px rgba(0, 0, 0, 0.75);
-	box-shadow: 0px -10px 25px 1px rgba(0, 0, 0, 0.75);
+	box-shadow: 0px -10px 25px 1px rgba(0, 0, 0, 0.75); */
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	padding: 30px;
+	/* padding: 30px; */
 
 }
 
