--- a/static/css/pivote-table-output.css
+++ b/static/css/pivote-table-output.css
@@ -1,7 +1,3 @@
-.home-footer {
-	height: 30px;
-}
-
 a.back-btn {
 	margin-left: auto;
 	background: lightblue;
@@ -18,37 +14,67 @@ a.back-btn {
 		flex-direction: column;
 	}
 }
-.btn{
+
+.btn {
 	margin-bottom: 4px;
 }
- .view-button-bar-container {
- 	bottom: 0;
- 	background: white;
- }
 
- .navbar {
- 	justify-content: left;
- }
+.container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
 
- .button-bar {
- 	display: flex;
- 	flex-direction: row;
- 	justify-content: space-around;
- 	list-style-type: none;
- 	padding: 30px 10px;
- 	border-radius: 5px;
- }
+.jumbotron {
+	padding: 10px 10px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 100vw;
+}
 
- @media(max-width: 600px) {
- 	.button {
- 		width: 50rem;
- 		text-align: center;
+@media (min-width: 576px) {
+	.jumbotron {
+		padding: 2px 2px;
+	}
+}
+
+a.back-btn {
+	margin-left: auto;
+	background: lightblue;
+	padding: 1px 15px;
+	color: black;
+	border-radius: 5px;
+}
+
+.view-button-bar-container {
+	bottom: 0;
+	background: white;
+}
+
+.navbar {
+	justify-content: left;
+}
+
+.button-bar {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	list-style-type: none;
+	/* padding: 30px 10px; */
+	border-radius: 5px;
+}
+
+@media(max-width: 600px) {
+	.button {
+		width: 50rem;
+		text-align: center;
 
 
- 	}
+	}
 
- 	.navigation {
- 		justify-content: cent;
- 		flex-direction: column;
- 	}
- }
+	.navigation {
+		justify-content: cent;
+		flex-direction: column;
+	}
+}
