View almost finished

--- a/templates/pivote-table-main.html
+++ b/templates/pivote-table-main.html
@@ -2,7 +2,7 @@
 <!-- Encabezado + Título -->
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/pivote-table-main.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 {% endblock %}
 <!-- Navegación -->
 
