--- a/templates/pivote-layout.html
+++ b/templates/pivote-layout.html
@@ -22,14 +22,14 @@
 	{% endblock %}
 </head>
 
-<body>
+<body class="site">
 	<header>
 		<nav class="navbar layout-top-nav">
 			{% block nav %}
 			{% endblock %}
 		</nav>
 	</header>
-	<main>
+	<main class="site content">
 		{% block content %}
 		{% endblock %}
 	</main>
