--- a/templates/pivote-output.html
+++ b/templates/pivote-output.html
@@ -505,7 +505,7 @@
 		<li class="btn btn-success" onclick="javascript:cambiarReporte(5)">Total. Resp.</li>
 		<li class="btn btn-success" onclick="javascript:cambiarReporte(6)">Total. Resp.-Cont.</li>
 		<li class="btn btn-success" onclick="javascript:cambiarReporte(7)">Total. Cont.-Resp.</li>
-		<li class="btn btn-success" onclick="javascript:cambiarReporte(8)">Total. Preg.-Resp.</li>
+		<li class="btn btn-success" id="lastbtn" onclick="javascript:cambiarReporte(8)">Total. Preg.-Resp.</li>
 
 		
 		
