--- a/static/css/output.css
+++ b/static/css/output.css
@@ -54,6 +54,9 @@ div.pivote-container>div#wdr-component {
 
 	.btn {
 		width: 100%;
-
+		margin: 5px auto;
+	}
+	#lastbtn{
+		margin-bottom: 20px;
 	}
 }
