--- a/templates/pivote-output.html
+++ b/templates/pivote-output.html
@@ -5,18 +5,17 @@
 {{ super() }}
 <link href="https://cdn.webdatarocks.com/latest/webdatarocks.min.css" rel="stylesheet" />
 <script src="https://cdn.webdatarocks.com/latest/webdatarocks.toolbar.min.js"></script>
-<script " 	src="https://cdn.webdatarocks.com/latest/webdatarocks.js"></script>
+<script src="https://cdn.webdatarocks.com/latest/webdatarocks.js"></script>
 <script type="text/javascript">
 	function setHeight(value) {
 		let obj = document.getElementById('wdr-component');
-		if(obj.style.height == "800px"){
+		if (obj.style.height == "800px") {
 			obj.style.height = "500px"
-		}
-		else{
+		} else {
 			obj.style.height = "800px"
 		}
 	}
-	window.onload=setHeight();	
+	window.onload = setHeight();
 </script>
 <link rel="stylesheet" type="text/css"
 	href="{{ url_for('static', filename='theme/lightblue/webdatarocks.min.css') }}" />
@@ -24,7 +23,7 @@
 {% endblock %}
 {% block nav %}
 {{ super() }}
-<div class="back-btn" onclick="javascript:setHeight()">↓ | ↑</div>
+<div class="back-btn" cursor="pointer" onclick="setHeight()">↓ | ↑</div>
 <a class="back-btn" href="/analizador" title="Volver a los filtros"><img
 		src="{{ url_for('static', filename='img/left-arrow-key.png') }}" alt="Back to filters" width="20px"></a>
 {% endblock %}
@@ -46,9 +45,7 @@
 <script>
 	let selectedJson = {{json | safe}} //ESTO TIENE QUE ESTAR DESCOMENTADO PARA QUE FUNCIONE
 	let modo = {{modo}}
-
-
-    let objReporte = {}
+	let objReporte = {};
 	switch (modo) {
 		case 1:
 			objReporte = {
@@ -72,7 +69,7 @@
 							"uniqueName": "fecha"
 						},
 						{
-						"uniqueName": "hora"
+							"uniqueName": "hora"
 						}
 					],
 					"rows": [{
@@ -80,10 +77,10 @@
 					}]
 
 				},
-				grid: {
+				"grid": {
 					"type": "flat"
 				}
-			}
+			};
 			break;
 		case 2:
 			objReporte = {
@@ -103,7 +100,7 @@
 				"grid": {
 					"type": "flat"
 				}
-			}
+			};
 			break;
 		case 3:
 			objReporte = {
@@ -118,12 +115,11 @@
 					"rows": [{
 						"uniqueName": "Measures"
 					}]
-
 				},
 				"grid": {
 					"type": "flat"
 				}
-			}
+			};
 			break;
 		case 4:
 			objReporte = {
@@ -143,7 +139,7 @@
 				"grid": {
 					"type": "flat"
 				}
-			}
+			};
 			break;
 		case 5: //Totalizador de respuestas
 			objReporte = {
@@ -163,7 +159,7 @@
 					"type": "compact",
 					"showTotals": "columns"
 				}
-			}
+			};
 			break;
 		case 6: // numtelefonos y sus respuestas
 			objReporte = {
@@ -183,7 +179,7 @@
 					"type": "compact",
 					"showTotals": "columns"
 				}
-			}
+			};
 			break;
 		case 7:
 			objReporte = {
@@ -203,7 +199,7 @@
 					"type": "compact",
 					"showTotals": "columns"
 				}
-			}
+			};
 			break;
 		case 8:
 			objReporte = {
@@ -220,12 +216,10 @@
 					}]
 				},
 				"grid": {
-					"grid": {
-						"type": "classic",
-						"showTotals": "columns"
-					}
+					"type": "classic",
+					"showTotals": "columns"
 				}
-			}
+			};
 
 			break;
 		default: //Si vienen modos no especificados muestra la tabla plana expandida
@@ -241,10 +235,16 @@
 							"uniqueName": "respuesta"
 						},
 						{
-						    "uniqueName": "fecha"
+							"uniqueName": "fecha"
 						},
 						{
-						    "uniqueName": "hora"
+							"uniqueName": "hora"
+						},
+						{
+							"uniqueName": "experiencia"
+						},
+						{
+							"uniqueName": "empresa"
 						}
 					],
 					"rows": [{
@@ -256,7 +256,7 @@
 					"type": "flat"
 				},
 
-			}
+			};
 			break;
 	}
 
@@ -270,9 +270,9 @@
 			slice: objReporte.slice,
 			grid: objReporte.grid
 		},
-        global{
-		    localization: "https://cdn.webdatarocks.com/loc/es.json"
-        }
+		global: {
+			localization: "https://cdn.webdatarocks.com/loc/es.json"
+		}
 	});
 
 	//  - - - BUTTON BAR - - - BUTTON BAR- - - BUTTON BAR- - - BUTTON BAR- - - BUTTON BAR- - - BUTTON BAR- - - BUTTON BAR- - - BUTTON BAR- - - BUTTON BAR- - - BUTTON BAR- - - BUTTON BAR
@@ -285,7 +285,6 @@
 					dataSource: {
 						data: selectedJson
 					},
-					//Acá se especifica el formato con el que se muestra la tabla
 					slice: {
 						"columns": [{
 								"uniqueName": "numtelefono"
@@ -303,21 +302,20 @@
 								"uniqueName": "empresa"
 							},
 							{
-							    "uniqueName": "fecha"
+								"uniqueName": "fecha"
 							},
 							{
-							    "uniqueName": "hora"
+								"uniqueName": "hora"
 							}
 						],
 						"rows": [{
 							"uniqueName": "Measures"
 						}]
-
 					},
 					grid: {
 						"type": "flat"
 					}
-				}
+				};
 				pivote.setReport(reporte);
 				break;
 			case 2:
@@ -325,7 +323,6 @@
 					dataSource: {
 						data: selectedJson
 					},
-					//Acá se especifica el formato con el que se muestra la tabla
 					slice: {
 						"columns": [{
 								"uniqueName": "numtelefono"
@@ -341,7 +338,7 @@
 					grid: {
 						"type": "flat"
 					}
-				}
+				};
 				pivote.setReport(reporte);
 				break;
 			case 3:
@@ -366,7 +363,7 @@
 					grid: {
 						"type": "flat"
 					}
-				}
+				};
 				pivote.setReport(reporte);
 				break;
 			case 4:
@@ -390,7 +387,7 @@
 					grid: {
 						"type": "flat"
 					}
-				}
+				};
 				pivote.setReport(reporte);
 				break;
 			case 5: //Totalizador de respuestas
@@ -416,7 +413,7 @@
 						"type": "compact",
 						"showTotals": "columns"
 					}
-				}
+				};
 				pivote.setReport(reporte);
 				break;
 			case 6:
@@ -440,7 +437,7 @@
 						"type": "compact",
 						"showTotals": "columns"
 					}
-				}
+				};
 				pivote.setReport(reporte);
 				break;
 			case 7:
@@ -464,7 +461,7 @@
 						"type": "compact",
 						"showTotals": "columns"
 					}
-				}
+				};
 				pivote.setReport(reporte);
 				break;
 			case 8:
@@ -485,13 +482,10 @@
 						}]
 					},
 					grid: {
-						"grid": {
-							"type": "compact",
-							"showTotals": "columns"
-						}
-					},
-
-				}
+						"type": "compact",
+						"showTotals": "columns"
+					}
+				};
 				pivote.setReport(reporte);
 				break;
 			default:
@@ -506,15 +500,18 @@
 <div class="button-bar-container">
 	<ul class="button-bar">
 
-		<li title="Plano" class="btn btn-primary" onclick="javascript:cambiarReporte(1)">Plana</li>
-		<li title="Contactos y sus respuestas" class="btn btn-primary" onclick="javascript:cambiarReporte(2)">Cont.-Resp.</li>
-		<li title="Preguntas y respuestas" class="btn btn-primary" onclick="javascript:cambiarReporte(3)">Preg.-Resp.</li>
-		<li title="Respuestas y contactos" class="btn btn-primary" onclick="javascript:cambiarReporte(4)">Resp.-Cont.</li>
-		<li title="Totalizador de respuestas" class="btn btn-success" onclick="javascript:cambiarReporte(5)">Total. Resp.</li>
-		<li title="Totalizador de respuestas por contacto" class="btn btn-success" onclick="javascript:cambiarReporte(6)">Total. Resp.-Cont.</li>
-		<li title="Totalizador de contactos y sus respuestas" class="btn btn-success" onclick="javascript:cambiarReporte(7)">Total. Cont.-Resp.</li>
-		<li title="Totalizador de preguntas y sus respuestas" class="btn btn-success" id="lastbtn" onclick="javascript:cambiarReporte(8)">Total. Preg.-Resp.</li>
-		
+		<li title="Plano" class="btn btn-primary" onclick="cambiarReporte(1)">Plana</li>
+		<li title="Contactos y sus respuestas" class="btn btn-primary" onclick="cambiarReporte(2)">Cont.-Resp.</li>
+		<li title="Preguntas y respuestas" class="btn btn-primary" onclick="cambiarReporte(3)">Preg.-Resp.</li>
+		<li title="Respuestas y contactos" class="btn btn-primary" onclick="cambiarReporte(4)">Resp.-Cont.</li>
+		<li title="Totalizador de respuestas" class="btn btn-success" onclick="cambiarReporte(5)">Total. Resp.</li>
+		<li title="Totalizador de respuestas por contacto" class="btn btn-success" onclick="cambiarReporte(6)">Total.
+			Resp.-Cont.</li>
+		<li title="Totalizador de contactos y sus respuestas" class="btn btn-success" onclick="cambiarReporte(7)">Total.
+			Cont.-Resp.</li>
+		<li title="Totalizador de preguntas y sus respuestas" class="btn btn-success" id="lastbtn"
+			onclick="cambiarReporte(8)">Total. Preg.-Resp.</li>
+
 	</ul>
 </div>
 {% endblock %}
