Started new project phase, layout setted

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,12 @@
             <tr><td><a href="http://167.86.94.15:5000/analizador"> Analizador</a></br>
             </td></tr>
 
+            <!-- http://127.0.0.1:5000/ -->
 
+            <tr>
+              <td><a href="http://127.0.0.1:5000/analizador"> Localhost | Juan</a></br>
+              </td>
+            </tr>
 
             <tr><td><a href="http://167.89.94.15:5000/pad/luis_api/3005:hola"> Api para hacer preguntas a luis 3005 idProyecto - hola Pregunto</a></br>
             </td></tr>
