--- a/static/css/analysis.css
+++ b/static/css/analysis.css
@@ -17,15 +17,32 @@
 	transition: all ease 300ms;
 }
 .item-menu{
-	height: 100px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	height: 50px;
 	width: 300px;
-	background: red;
-	color: yellow;
-	padding: 10px 50px;
+	background: #03A9F4;
+	color: black;
+	font-weight: bold;
+	padding: 10px 30px;
 	margin: 5px;
+	border-radius: 10px;
 }
 .subitem-menu{
-	background: blue;
+	background: #03A9F5;
 	color: green;
+	display: flex;
+	flex-direction: row;
+	justify-content: center
+	align-items: center;
 }
+a{
+	color: white;
+	text-decoration: none;
+	margin-left: 10px;
+}
+
+
 
