--- a/static/css/analysis.css
+++ b/static/css/analysis.css
@@ -1,9 +1,3 @@
-.back-btn {
-	padding: 3px 15px 3px 15px;
-	background: lightblue;
-	border-radius: 5px;
-	margin-left: 5px;
-}
 
  /* Dropdown */
 
@@ -43,6 +37,53 @@ a{
 	text-decoration: none;
 	margin-left: 10px;
 }
+.dropdownTitle {
+	margin-bottom: 10px;
+}
+button {
+	-webkit-appearance: none;
+	text-rendering: auto;
+	color: black;
+	font-family: inherit;
+	letter-spacing: normal;
+	word-spacing: normal;
+	text-transform: none;
+	text-indent: 0px;
+	text-shadow: none;
+	display: inline-block;
+	text-align: center;
+	align-items: flex-start;
+	cursor: default;
+	background-color: transparent;
+	box-sizing: border-box;
+	margin: 0em;
+	padding: 1px 6px;
+	padding-top: 1px;
+	padding-right: 6px;
+	padding-bottom: 1px;
+	padding-left: 6px;
+	border-width: 2px;
+	border-top-width: 2px;
+	border-right-width: 2px;
+	border-bottom-width: 2px;
+	border-left-width: 2px;
+	border-style: none;
+	border-top-style: none;
+	border-right-style: none;
+	border-bottom-style: none;
+	border-left-style: none;
+	border-color: none;
+	border-top-color: none;
+	border-right-color: none;
+	border-bottom-color: none;
+	border-left-color: none;
+	border-image: initial;
+}
 
 
-
+button.back-btn {
+	padding: 3px 15px 3px 15px;
+	background: lightblue;
+	border-radius: 5px;
+	margin-left: 5px;
+}
